kubernetes/immich/components/immich-sync/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-openshift-ingress-immich
  namespace: immich
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: immich-cron
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - protocol: TCP
          port: 443 # Passthrough/ReEncrypt Termination
        - protocol: TCP
          port: 80 # Edge Termination
